--- a/application/admin/view/group/group_list.html
+++ b/application/admin/view/group/group_list.html
@@ -4,6 +4,7 @@
     <div class="layui-row">
         <a class="layui-btn layui-btn-sm" href="javascript:"
         onclick="x_admin_show('添加班级', '/admin/group/add');">{$lang.add_group}</a>
+        <button type="button" class="layui-btn layui-btn-sm"  href="javascript:" onclick="location.reload();"><i class="layui-icon layui-icon-refresh"></i>刷新</button>
     </div>
     <table class="layui-hide" id="group-table"></table>
 </div>
