--- a/application/admin/view/user/admin_user_list.html
+++ b/application/admin/view/user/admin_user_list.html
@@ -2,6 +2,7 @@
 {block name="content"}
 <div class="x-body">
     <a class="layui-btn layui-btn-sm" href="javascript:" onclick="x_admin_show('添加管理员','/admin/user/add_admin',800,630);">添加管理员</a>
+    <button type="button" class="layui-btn layui-btn-sm"  href="javascript:" onclick="location.reload();"><i class="layui-icon layui-icon-refresh"></i>刷新</button>
     <table class="layui-hide" id="admin-user-list"></table>
 </div>
 
