--- a/application/group/view/group-task-copy-homework.html
+++ b/application/group/view/group-task-copy-homework.html
@@ -1,5 +1,8 @@
 {extend name="admin@base" /}
 {block name="content"}
+
+{include file="common@snippets/greetings_css"}
+
 <div class="x-body">
     <form class="layui-form" id="homework-copy-from-homework-form">
         <input type="text" value="{$group->id}" id="group-id" hidden>
