hotfix for admin/news_list.html, admin/user_list.html

--- a/application/admin/view/news/news_list.html
+++ b/application/admin/view/news/news_list.html
@@ -2,8 +2,8 @@
 {block name="content"}
 <div class="x-body">
     <div class="layui-row">
-        <a class="layui-btn layui-btn-sm" href="javascript:"
-           onclick="x_admin_show('添加新闻', '/admin/news/add', 800,600)">{$lang.add_news}</a>
+        <a class="layui-btn layui-btn-sm" href="javascript:" onclick="x_admin_show('添加新闻', '/admin/news/add', 800,600)">{$lang.add_news}</a>
+        <button type="button" class="layui-btn layui-btn-sm"  href="javascript:" onclick="location.reload();"><i class="layui-icon layui-icon-refresh"></i>刷新</button>
     </div>
     <br>
     <div class="layui-row">
