Add auto-reload on /solutions/:ID

--- a/application/home/view/themes/bootstrap/status-solution.html
+++ b/application/home/view/themes/bootstrap/status-solution.html
@@ -58,6 +58,12 @@
 </script>
 
 <script type="text/javascript">
+    $(function(){
+        setTimeout(function(){
+            location.reload();
+        }, 2000);
+    });
+
     function manual_set_result() {
         let manual_result_val = $('#manual-result').val();
         $.post('/api/solution/manual_set_result', {'solution_id': solution_id, 'result': manual_result_val}, function(d){
