--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -109,7 +109,7 @@
                 </ul>
             </li>
 
-            {if $is_root}
+            {if $login_user->is_root}
             <li>
                 <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
