--- a/application/admin/view/layout/admin_common.html
+++ b/application/admin/view/layout/admin_common.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="shortcut icon" href="/favicon.gif" type="image/x-icon" />
-    <title>{if $is_root}{$lang.root}{else}{$lang.administrator}{/if}</title>
+    <title>{if $login_user->is_root}{$lang.root}{else}{$lang.administrator}{/if}</title>
 
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/admin">{if $is_root}{$lang.root}{else}{$lang.administrator}{/if}</a>
+            <a class="navbar-brand" href="/admin">{if $login_user->is_root}{$lang.root}{else}{$lang.administrator}{/if}</a>
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
                 <li{if 'upload_file' == $nav} class="active"{/if}><a href="/admin/fileupload">{$lang.upload_file}</a></li>
                 <li{if 'changepassword' == $nav} class="active"{/if}><a href="/admin/changepassword">{$lang.change_password}</a></li>
 
-                {if $is_root}
+                {if $login_user->is_root}
                 <!-- root权限专属 begin -->
                 <li class="dropdown{if 'root_tools' == $nav} class="active"{/if}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
