--- a/application/contest/view/contest-status.html
+++ b/application/contest/view/contest-status.html
@@ -84,7 +84,7 @@
 			<td width="10%">{$solution->memory} B</td>
 			<td width="10%">{$solution->time} ms</td>
 			<td width="10%">
-				{if $is_administrator || ($login_user && $solution->user_id == $login_user->user_id)}
+				{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
 				<a href="javascript:;" onclick="show_solution({$solution->solution_id})">{$solution->language_text}</a>
 				{else}
 				{$solution->language_text}
