--- a/application/home/view/themes/bootstrap/sim.html
+++ b/application/home/view/themes/bootstrap/sim.html
@@ -5,24 +5,24 @@
     <div class="layui-col-sm6">
         <div style="margin: 10px 10px 10px 10px">
             <p>solution_id = {$sim->s_id}</p>
-            {if $is_administrator}<p>UserId：{$sim->s_solution->user->user_id}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>UserId：{$sim->s_solution->user->user_id}</p>{/if}
             <p>班级：{$sim->s_solution->user->class}</p>
-            {if $is_administrator}<p>昵称：{$sim->s_solution->user->nick}</p>{/if}
-            {if $is_administrator}<p>姓名：{$sim->s_solution->user->realname}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>昵称：{$sim->s_solution->user->nick}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>姓名：{$sim->s_solution->user->realname}</p>{/if}
             <p>比赛：{$sim->s_solution->contest->title | default=''}</p>
-            {if $is_administrator}<pre class="layui-code">{$sim->s_src->source}</pre>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<pre class="layui-code">{$sim->s_src->source}</pre>{/if}
         </div>
 
     </div>
     <div class="layui-col-sm6">
         <div style="margin: 10px 10px 10px 10px">
             <p>sim_solution_id = {$sim->sim_s_id}</p>
-            {if $is_administrator}<p>UserId：{$sim->sim_s_solution->user->user_id}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>UserId：{$sim->sim_s_solution->user->user_id}</p>{/if}
             <p>班级：{$sim->sim_s_solution->user->class}</p>
-            {if $is_administrator}<p>昵称：{$sim->sim_s_solution->user->nick}</p>{/if}
-            {if $is_administrator}<p>姓名：{$sim->sim_s_solution->user->realname}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>昵称：{$sim->sim_s_solution->user->nick}</p>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<p>姓名：{$sim->sim_s_solution->user->realname}</p>{/if}
             <p>比赛：{$sim->sim_s_solution->contest->title | default=''}</p>
-            {if $is_administrator}<pre class="layui-code">{$sim->sim_s_src->source}</pre>{/if}
+            {if $this->login_user && $this->login_user->is_admin}<pre class="layui-code">{$sim->sim_s_src->source}</pre>{/if}
         </div>
     </div>
 </div>
