refactor: 整理项目代码，将 *BaseController 放至各模块的common目录中 #39

--- a/application/home/view/common_html/language_selector.html
+++ b/application/home/view/common_html/language_selector.html
@@ -1,2 +1,2 @@
-<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=cn',function(d){location.reload();},'json');">中文</a>&nbsp;
-<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=en',function(d){location.reload();},'json');">English</a>&nbsp;
+<a href="javascript:" onclick="$.get('/api/Uilanguage/set_lang?language=cn',function(d){location.reload();},'json');">中文</a>&nbsp;
+<a href="javascript:" onclick="$.get('/api/Uilanguage/set_lang?language=en',function(d){location.reload();},'json');">English</a>&nbsp;
